# Token-Heatmap

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: app-release.yml  ci.yml  docs.yml  release.yml
app/: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  lighthouserc.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
app/e2e/: attention.spec.ts  load-trace.spec.ts  tsconfig.json  view-state-persistence.spec.ts
app/e2e/fixtures/: activation-trace-a.json  activation-trace-b.json  invalid-trace.json  sample-trace.json
app/e2e/helpers/: loadTrace.ts
app/src/: App.test.tsx
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src/a11y/: accessible-names.test.tsx  sweep.test.tsx
app/src/components/: VizModal.css
app/src/components/feedback/: EmptyState.css  EmptyState.test.tsx  EmptyState.tsx  ErrorState.css  LoadingState.css  LoadingState.tsx
app/src/components/help/: KeymapHelpDialog.css  KeymapHelpDialog.test.tsx  KeymapHelpDialog.tsx
app/src/components/layout/: AppShell.css  AppShell.test.tsx  PaneGutter.css  PaneGutter.test.tsx  (+3 more)
app/src/features/: index.ts
app/src/hooks/: useKeymap.test.ts  usePaneWidths.ts  useReducedMotion.ts  useTheme.ts  useThemeTokens.ts  useTrace.test.ts  useViewState.test.tsx  useViewState.ts
app/src/lib/: keymap.ts
app/src/pages/: DiffViewerPage.tsx  LandingPage.tsx  TraceViewerPage.css  TraceViewerPage.test.tsx
app/src/styles/: theme.css
app/src/types/: activation.ts  trace.ts
configs/: README.md  attention-demo.yaml  count-clean.yaml  cyclic-days.yaml  dla-demo.yaml  example.yaml  greater-than.yaml  induction.yaml  ioi.yaml  linebreak.yaml  multihop.yaml  reasoning.yaml  recall-probe.yaml  successor.yaml  wrap-text.yaml
docs/: README.md  cli.md  installation.md  interpreting.md  manifold-reproduction.md  python-api.md  schema.md  troubleshooting.md  web-app.md
docs/epics/: 01-direct-logit-attribution.md  02-interventions-ablation.md  03-attribution-graph.md  04-faithfulness-error-reporting.md  05-cross-layer-logit-flow.md  06-sae-transcoder-features.md  07-twera-global-coactivation.md  README.md
docs/web/: activation-sidecar.schema.json  attention-sidecar.schema.json  trace.schema.json
examples/: dla_causal_validation.py  helix-report.py  qwen_attention_inspect.py
llm_token_heatmap/: __init__.py  activation_probe.py  activation_serializer.py  adaptive_probe.py  attention_serializer.py  attention_stats.py  cli.py  direct_logit_attribution.py  generation.py  head_roles.py  intervention.py  logit_lens.py  neuron_attribution.py  plotting.py  probe.py  prompt_logit_lens.py  runner.py  sampling.py  trace_payload.py
llm_token_heatmap/analysis/: __init__.py  attention_stats.py  diff.py  direct_logit_attribution.py  head_roles.py  intervention.py  manifold.py  probe.py
llm_token_heatmap/commands/: __init__.py  _util.py  dev.py  hpc.py  web.py
llm_token_heatmap/probes/: __init__.py  activation_probe.py  attention_probe.py  prompt_logit_lens.py
llm_token_heatmap/serialize/: __init__.py  activation_serializer.py  attention_serializer.py  export.py  trace_payload.py
llm_token_heatmap/tracing/: __init__.py  generation.py  runner.py  sampling.py
llm_token_heatmap/viz/: __init__.py  plotting.py
scripts/: build-frontend.sh  dev.sh  helix-report.py  hpc-gen.slurm  hpc-run.sh  hpc-serve.sh  hpc-setup.sh  setup.sh
tests/: conftest.py  test_activation_e2e.py  test_activation_probe.py  test_activation_schema.py  test_activation_serializer.py  test_adaptive_probe.py  test_attention_probe.py  test_attention_serializer.py  test_attention_stats.py  test_cli.py  test_diff.py  test_direct_logit_attribution.py  test_export.py  test_generation.py  test_head_roles.py  test_intervention.py  test_logit_lens.py  test_manifold.py  test_neuron_attribution.py  test_plotting.py  test_probe.py  test_prompt_logit_lens.py  test_sampling.py  test_trace_payload.py
tests/fixtures/: __init__.py  tiny_attention_model.py  tiny_two_model.py
web/backend/: README.md  pyproject.toml
web/backend/llm_token_heatmap_api/: __init__.py  config.py  errors.py  main.py
web/backend/llm_token_heatmap_api/routes/: __init__.py  health.py  schema.py  trace.py
web/backend/llm_token_heatmap_api/services/: __init__.py  trace_serializer.py
web/backend/tests/: conftest.py  test_health.py  test_intervene.py  test_schema.py  test_trace_convert_csv.py  test_trace_diff.py  test_trace_generate.py
web/frontend/: .env.example  .env.local.example  .gitignore  README.md  index.html  openapi.json  package-lock.json  package.json  vite.config.ts
web/frontend/e2e/: a11y.spec.ts  activations.spec.ts  comparison-view.spec.ts  export.spec.ts  heatmap-interaction.spec.ts  view-state-persistence.spec.ts  visual.spec.ts
web/frontend/scripts/: codegen-api.mjs  codegen-types.mjs
web/frontend/src/: App.tsx  main.tsx  setupTests.ts
(+252 files in other folders)
