[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-token-heatmap"
version = "0.1.0"
description = "PyTorch component for analyzing LLM inference-time token probability distributions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "accelerate>=0.30",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
docs = [
    "mkdocs>=1.6",
]

[project.scripts]
token-heatmap = "llm_token_heatmap.cli:main"

[tool.setuptools.packages.find]
include = ["llm_token_heatmap*"]
exclude = ["examples*", "outputs*", "tests*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["llm_token_heatmap"]

[tool.mypy]
python_version = "3.10"
files = ["llm_token_heatmap"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
