[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-token-heatmap"
version = "0.1.0"
description = "Analyze and visualize how an LLM picks each next token: probabilities, attention, logit-lens, activations, manifold geometry — CLI + web app."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jiucheng Zang", email = "git.jiucheng@gmail.com" }]
keywords = [
    "llm",
    "interpretability",
    "mechanistic-interpretability",
    "transformers",
    "pytorch",
    "visualization",
    "attention",
    "logit-lens",
    "token-probability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "transformers>=5.0",
    "accelerate>=0.30",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "jsonschema>=4.18",
]
cli = [
    "pyyaml>=5.1",
]
models = [
    "tiktoken>=0.6",
    "einops>=0.7",
]
docs = [
    "mkdocs>=1.6",
]

[project.scripts]
token-heatmap = "llm_token_heatmap.cli:main"

[project.urls]
Homepage = "https://github.com/zangjiucheng/Token-Heatmap"
Repository = "https://github.com/zangjiucheng/Token-Heatmap"
Issues = "https://github.com/zangjiucheng/Token-Heatmap/issues"

[tool.setuptools.packages.find]
include = ["llm_token_heatmap*"]
exclude = ["examples*", "outputs*", "tests*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["llm_token_heatmap"]

[tool.mypy]
python_version = "3.10"
files = ["llm_token_heatmap"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
