[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-token-heatmap-api"
version = "0.1.0"
description = "FastAPI backend for the llm-token-heatmap library: trace generation and CSV conversion."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "llm-token-heatmap",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.26",
    "jsonschema>=4.20",
]

[tool.setuptools.packages.find]
include = ["llm_token_heatmap_api*"]
exclude = ["tests*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["llm_token_heatmap", "llm_token_heatmap_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
